[gd_scene load_steps=2 format=3 uid="uid://dfqxlc72yruln"]

[ext_resource type="Script" uid="uid://bx82g7euhqt1y" path="res://PauseMenu/pause_menu.gd" id="1_ca7tt"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 2.0
offset_right = 3.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ca7tt")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 356.0
offset_top = 121.0
offset_right = 789.0
offset_bottom = 519.0

[node name="Control" type="Control" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/Control"]
layout_mode = 0
offset_left = 66.0
offset_top = 50.0
offset_right = 376.0
offset_bottom = 108.0
text = "Resume"

[node name="Save1" type="Button" parent="PanelContainer/Control"]
layout_mode = 0
offset_left = 68.0
offset_top = 126.0
offset_right = 146.0
offset_bottom = 190.0
text = "Save 1"

[node name="Quit" type="Button" parent="PanelContainer/Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 295.0
offset_right = 376.0
offset_bottom = 356.0
text = "Quit"

[node name="Back to menu" type="Button" parent="PanelContainer/Control"]
layout_mode = 0
offset_left = 65.0
offset_top = 212.0
offset_right = 374.0
offset_bottom = 277.0
text = "Back to menu"

[node name="Save2" type="Button" parent="PanelContainer/Control"]
layout_mode = 0
offset_left = 180.0
offset_top = 127.0
offset_right = 258.0
offset_bottom = 190.0
text = "Save 2"

[node name="Save3" type="Button" parent="PanelContainer/Control"]
layout_mode = 0
offset_left = 298.0
offset_top = 127.0
offset_right = 372.0
offset_bottom = 190.0
text = "Save 3"

[connection signal="pressed" from="PanelContainer/Control/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/Control/Save1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="PanelContainer/Control/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/Control/Back to menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="PanelContainer/Control/Save2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="PanelContainer/Control/Save3" to="." method="_on_save_3_pressed"]
